Use units correctly

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -30,8 +30,8 @@ document.addEventListener("THREELoaded", function(event) {
     document.querySelector("div#fig\\:grid_organization img").remove();
     const container = document.createElement("div");
     container.style.border = 'solid 1px black';
-    container.style.width = '400px;'
-    container.style.height = '400px;'
+    container.width = '400px'
+    container.height = '400px'
     container.id = 'grid_scene';
     document.querySelector("div#fig\\:grid_organization").prepend(container);
     fetch('./images/grid_scene.json')
