This should finish it up

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -29,9 +29,11 @@ document.addEventListener("THREELoaded", function(event) {
     //const OrbitControls = event.OrbitControls;
     document.querySelector("div#fig\\:grid_organization img").remove();
     const container = document.createElement("div");
+    const width = 400;
+    const height = 400;
     container.style.border = 'solid 1px black';
-    container.style.width = '400px'
-    container.style.height = '400px'
+    container.style.width = `${width}px`;
+    container.style.height = `${height}px`;
     container.id = 'grid_scene';
     document.querySelector("div#fig\\:grid_organization").prepend(container);
     fetch('./images/grid_scene.json')
@@ -40,7 +42,9 @@ document.addEventListener("THREELoaded", function(event) {
             const scene = new THREE.ObjectLoader().parse( json );
             const renderer = new THREE.WebGLRenderer();
             const camera = scene.children[0];
-            renderer.setSize(container.clientWidth, container.clientHeight);
+            // We set this to 400 so that it doesn't need to be rendered
+            // onscreen before it can be set up correctly.
+            renderer.setSize(width, height);
             renderer.setPixelRatio(window.devicePixelRatio);
             const controls = new OrbitControls( camera, renderer.domElement );
             container.append(renderer.domElement);
