Removing some TODOs and fixing some references

--- a/content/45.user_friendliness.md
+++ b/content/45.user_friendliness.md
@@ -15,7 +15,7 @@ In addition to API considerations, there are three areas that we note have addit
 Matplotlib @doi:10.5281/zenodo.7570264 is a fully-featured mechanism for generating figures, with an incredible array of options to customize formatting, appearance, rendering of fonts and glyphs, selection of colorbars, calculation of tick locations, and appropriate bounds.
 This degree of flexibility provides extremely fine-grained control over the appearance of figures for publication, and Matplotlib provides a large number of output formats for even the most discerning of journals.
 
-yt utilizes Matplotlib as its primary rendering engine for visualizations; while 3D renderings (such as those described in @sec:vr) typically generate raw pixel buffers that are saved as images directly, most other visualization functionality in yt relies on Matplotlib for generating images that are saved to disk.
+yt utilizes Matplotlib as its primary rendering engine for visualizations; while 3D renderings (such as those described in @sec:software-volume-rendering) typically generate raw pixel buffers that are saved as images directly, most other visualization functionality in yt relies on Matplotlib for generating images that are saved to disk.
 Slices and projections are prepared as variable-resolution images that are pixelized (@sec:pixelization) into fixed resolution buffers, then provided to Matplotlib in the `imshow` function.
 Phase plots utilize the `pcolormesh` function.
 
