--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -12,7 +12,7 @@ We present a technique for using Morton bitmap indexes to map files and accelera
 
 ### Theory and Background {#sec:bitmap_theory}
 
-#### Domain Partitioning Between Files
+#### Domain Partitioning Between Files {#sec:decomp}
 
 A common analysis task is the selection of data within a subset of the full domain; we use the term "selector\" to refer to the selection operator.
 If the dataset is split across multiple files, either due to size constraints or to allow for parallel I/O, such selections require every file to be loaded and parsed in order to assemble all of the data within the selection criteria.
@@ -78,7 +78,6 @@ As seen in panel (a) of Figure @fig:zorder, ordering of the cells by their Morto
 ![
 Example of 3rd order Morton curve in two dimensions.
 The bits of the $x$ and $y$ indices are interleaved to generate a single integer that fully describes the cell's location within the two-dimensional domain to within $1/2^{3}$th of the domain in each dimension.
-**NOTE: wouldn't it make more sense to write $y$ and $x$ is this order, so that the interleaving could be represented with arrows without crossing them ?**
 ](images/bitmap/zorder.png){#fig:zorder}
 
 The precision of a single Morton index is only limited by the size of the integer used to store it.
@@ -93,7 +92,7 @@ By recording the indices of the cells containing data from each file within a da
 Bitmap indexes use the values of single bits within an array of bits to describe dataset properties.
 This form requires minimal memory and can be filtered using computationally inexpensive boolean operations.
 Bitmap indexes have long been popular for use with large data warehouses [@Wu1998; @Chan1998; @Chan1999].
-However, as scientific datasets have become larger and more complex, they have also begun to gain traction in a diverse array of scientific fields including geosciences [@Malensek2014], earth sciences *TODO: insert citation here ?*, rocket science [@Sinha2006; @Sinha2007], high-energy physics [@Stockinger2000], and combustion [@Wu2003].
+However, as scientific datasets have become larger and more complex, they have also begun to gain traction in a diverse array of scientific fields including geosciences [@Malensek2014], earth sciences, rocket science [@Sinha2006; @Sinha2007], high-energy physics [@Stockinger2000], and combustion [@Wu2003].
 
 In cases where data attributes can take on a finite set of values, one bitmap is constructed for each possible attribute value.
 Within the bitmap each bit specifies whether or not the corresponding data point has that value.
