Add a note to myself

--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -262,3 +262,5 @@ In both, the mesh elements have been outlined in black.
 As is clearly visible in the second plot, `yt` is applying higher-order methods for computing pixel values; not only through non-linear interpolation of field values, but also in the shape of the elements, which extend outside the *linear* boundaries of the tetrahedral elements.
 
 ### Non-Cartesian Coordinates {#sec:noncartesian}
+
+**MJT: This needs to be written**
