add section on non-cartesian stuff

--- a/content/17.geometry_and_indexing.md
+++ b/content/17.geometry_and_indexing.md
@@ -32,7 +32,7 @@ document.addEventListener("SVGLoaded", function(event) {
 });
 </script>
 
-### Abstraction of Coordinate Systems
+### Abstraction of Coordinate Systems {#sec:abstraction-coordinates}
 
 yt provides a system for defining relationships between index-space and coordinate-space.
 During instantiation of a `Dataset` object, a helper object (`coordinates`, a subclass of `CoordinateHandler`) is created.
