--- a/content/10.community_building.md
+++ b/content/10.community_building.md
@@ -1,7 +1,7 @@
 ## Community Building {#sec:community}
 
-Choosing a software package for a particular purpose involves evaluating several differentiating factors; these factors include the functionality of a package, the performance of a package, the user-friendliness, and even the ability of an individual to find help, engage with others and feel a sense of participation.
-**cite something here** The development, fostering and design of the community around `yt` is deemed to be both crucial to the success or failure of `yt`, and in many ways inseparable from its functionality.
+Choosing a software package for a particular purpose involves evaluating several differentiating factors; these factors include the functionality of a package, the performance of a package, the user-friendliness, and even the ability of an individual to find help, engage with others and feel a sense of participation [@doi:10.1371/journal.pcbi.1007296].
+The development, fostering and design of the community around `yt` is deemed to be both crucial to the success or failure of `yt`, and in many ways inseparable from its functionality.
 
 ### Composition
 
@@ -32,8 +32,8 @@ When evaluating the level of engagement, we consider a few different classificat
  * Issuing a pull request
  * Writing documentation
  * Participating in code review
- * Drafting an enhancement proposal
  * Closing bug reports
+ * Drafting an enhancement proposal
 
 While there are other activities that individuals can participate in, these are the typical activities we see among participants in the community.
 The order, flowing from the first to the last, is the typical flow we see for an individual coming to participate in the community.
