--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -158,7 +158,7 @@ The workflow for code review roughly follows this outline:
 
  1. A pull request is issued.  When a new pull request is issued, a template is provided that includes a description of the change, requesting information about its compliance with coding standards, etc.
  2. The pull request is automatically marked as unmergeable until a team member applies the correct component label.
- 3. Code is reviewed, line-by-line, and suggestions are made by humans. Code linting is automated.
+ 3. Code is reviewed, line-by-line, and suggestions are made by humans. Code linting, where specific behaviors are identified (such as inconsistent naming, unused variables, unreachable code sections, etc) is automated.
  4. This process is iterated, ensuring that tests, results accuracy and coding standards are maintained.
 
 One increasing issue with the code review process is ensuring that changes are reviewed with appropriate urgency; larger pull requests tend to languish without review, as the requirements for review necessarily add burden to the maintainers.
@@ -174,6 +174,7 @@ By queuing up pull requests for merging, it allows maintainers to mark a set of 
 ### Code Styling and Linting
 
 For code included in ``yt``, a set of styles are enforced.
+The term "linting" is used to describe applying automated checks to enforce sytlistic consistency, as well as to flag potential errors that can be detected through static analysis of the code.
 
 We rely on the [``pre-commit``](https://pre-commit.com) framework, which enables automated checks as well as automatic fixes at commit time.
 This tool is an opt-in so not every "drive-by" contributor has to learn and install it, but continuous linting is provided by [pre-commit.ci](https://pre-commit.ci) so styling errors cannot slip in.
@@ -181,7 +182,7 @@ This tool is an opt-in so not every "drive-by" contributor has to learn and inst
 We configure `pre-commit` to run a mixture of formatters and static checkers.
 The former modify the code in place, while the latter only report errors and so-called "code smells" (such as undefined variables, unused imports, bare `except` statements...) but require human developers fix them.
 
-Our suite of formatter most proeminently includes
+Our suite of formatter most prominently includes
 [``black``](https://black.readthedocs.io/en/stable/),
 [``isort``](https://pycqa.github.io/isort/) and
 [``pyupgrade``](https://github.com/asottile/pyupgrade).
@@ -207,13 +208,13 @@ However, new contributions are allowed to include type hinting, and work is unde
 ### YTEP Process {#sec:ytep}
 
 YTEPs, or "`yt`-enhancement proposal" are vehicles for collaborative decision-making in the project.
-Implemented shortly after the first paper on `yt` was released, the YTEP process experienced a fairly pronounced period of usage during the transition between versions 2.0 and 3.0 of `yt`, and has since been utilized considerably less.
 During periods of rapid development, the needs of the community for stability have to be balanced against desires for change; the YTEP process was implemented to facilitate stakeholder feedback, allow for discussion of design decisions, and to prompt detailed thinking about how and why things should be implemented.
 We have modeled this process against that used in the AstroPy community ("APE").
 To create a new proposal for a large change to `yt`, or to document a decision-making process, individuals prepare a description of the background, motivation for the change, the steps to implementation, and potential alternative approaches.
 The proposal is discussed through the pull-request process, and once discussion has concluded it is added to the [repository](https://github.com/yt-project/ytep) of YTEPs that is auto-built and [deployed](https://ytep.readthedocs.org/).
-The accepted YTEPs have included implementing the chunking system, developing a units system, removing legacy components, and implementing a code of conduct.
 
+Implemented shortly after the first paper on `yt` was released, the YTEP process experienced a fairly pronounced period of usage during the transition between versions 2.0 and 3.0 of `yt`, and has since been utilized considerably less.
+The accepted YTEPs have included implementing the chunking system, developing a units system, removing legacy components, and implementing a code of conduct.
 Below, we include a table of current YTEPs as of this writing.
 
 | Number   | YTEP Title                                            | Created            | Authors                                                             |
