--- a/content/17.geometry_and_indexing.md
+++ b/content/17.geometry_and_indexing.md
@@ -40,7 +40,7 @@ This helper object tracks the correspondence between numerical axes and spatial 
 In addition to these helper functions, the coordinate handler provides definitions for derived fields that describe local cell width (and orthogonal path length), positions in coordinate space as computed by index space coordinates, volumes, and surface areas.
 These coordinate handlers also provide transformations between different spaces, albeit using the somewhat undesirable method of conversion to reference cartesian frames and subsequent conversion to local coordinate frames.
 
-At present, coordinate spaces are defined in the spaces enumerate in Table @tbl:coord-systems.
+At present, coordinate spaces are defined in the spaces enumerated in Table @tbl:coord-systems.
 While these are representative of the most common spatial representations, additional representations (such as those that include a non-trivial mapping between coordinates and index values) are possible to implement.
 
 | Coordinate system               | Axes                                                        |
@@ -56,6 +56,6 @@ Table: Extant coordinate systems; in all cases, value ranges should be taken to 
 
 Future developments may involve code generation for arbitrary coordinate systems, using SymPy or other libraries.
 Independent of the visualization methods (which can often be reused), the development of coordinate systems is largely rote, applying straightforward mathematics to construct derived field definitions.
-As such, using mechanisms in SymPy for construction of relationships between coordinate systems may be a feasible method of developing code-generation for coordinate system handlers in yt.
+As such, using mechanisms in SymPy for construction of relationships between coordinate systems may be a feasible method of developing code-generation for coordinate system handlers in `yt`.
 
 
