finish comments from Stephanie

--- a/content/25.processing_and_analysis.md
+++ b/content/25.processing_and_analysis.md
@@ -10,7 +10,6 @@ In `yt`, there are three types of "fields" that define values at a given spatial
 The first of these is an "on-disk" field, representing the raw, unmodified (except potentially up-cast to 64 bit precision) values read from the data storage that defines the dataset, such as files or bucket storage; while `yt` does provide routines for reading these fields, they are passed largely unmodified and so we do not discuss them in depth.
 The second type of field is a "derived field," which is a functional definition of how to process or combine one or more fields that exist in the dataset.
 Finally, providing the closure necessary for these derived fields to be accessed independently of their naming convention are "alias fields" that provide mappings between platform- or format-specific names for fields and those used internally in `yt`.
-This collection of three classes of fields
 
 Fields are also defined by their "sampling type" to distinguish between those fields defined in a volume-filling fashion (i.e., cell-based fields) and those that are defined by discrete samples that may or may not require closure or convolution functions to be applied.
 Fields that are defined as a collection of discrete samples can be combined or filtered differently than those that are defined in a volume-filling manner, as described in @sec:particle_filters and @sec:particle_unions.
@@ -90,7 +89,7 @@ If both particle types share fields A and B but only one shares C, the union wil
 #### Field Detection {#sec:field_detection}
 
 `yt` determines at dataset instantiation time the fields that are available to be computed.
-This provides the ability for researcher to *query* what fields are available, and additionally as a side-effect it provides information to the `yt` IO routines which fields need to be computed for a given derived field.
+This provides the ability for researchers to *query* what fields are available, and additionally as a side-effect it provides information to the `yt` IO routines which fields need to be computed for a given derived field.
 By utilizing this information, `yt` can "resolve" all required fields when a derived field is requested.
 As such, it is able to identify that `("gas", "velocity_divergence")` relies on the velocity fields along each axis.
 If these are the fields that exist in the dataset, the resolution process concludes here.
@@ -139,7 +138,7 @@ This translates our meaning -- find the maximum value along the z-axis -- into a
 These operations, on data objects (rather than the underlying arrays of values that are accessible through them) provide dataframe-like methods for querying very large, spatially registered data.
 
 The array-like operations utilized in `yt` attempt to map to conceptually similar operations in numpy.
-Unlike numpy, however, these utilize `yt`'s dataset-aware "chunking" operations, in a manner philosophically similar to the chunking operations used in dask.
+Unlike numpy, however, these utilize `yt`'s dataset-aware "chunking" operations, in a manner philosophically similar to the chunking operations used in the parallel computation library dask.
 Below, we outline the three classes of operations that are available, based on the type of their return value.
 
 #### Reduction to Scalars  {#sec:arrayops-scalar}
