--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -38,9 +38,11 @@ Additionally, by providing some routines as options, we can in some instances sp
  * `select_bbox_edge(lower_left, upper_right)`: This is a special-case of the bounding box routine that provides information as to whether or not the *entire* bounding box is included or just a *partial* portion of the bounding box.
 
 We demonstrate a handful of selection operations on a low-resolution dataset below.
+In each of these figures, the rectangular regions outlined in gray and black indicate individual grid patches, where data may vary in resolution and cell size.
 In Figure @fig:reg2 we illustrate the selection of a rectangular prism (i.e., a `region`, like in Section @sec:dobj-region.
 In Figure @fig:sp2, we illustrate the selection of a sphere (i.e., a `sphere`, like in Section @sec:dobj-sphere.
 And, to demonstrate yt's ability to construct boolean selectors from these objects (i.e., Section @sec:dobj-bool we show what the logical `NOT` of these two objects would produce in @fig:reg2_not_sp2.
+We note in particular that while these regions are constructed from geometric selections, the data points are selected by the inclusion of their center points, leading to slightly irregular edges; this is by design.
 
 ![
 A selection of data in a low-resolution simulation from a rectangular prism.
@@ -72,7 +74,7 @@ With discrete point selection (and for our purposes, often unstructured mesh fal
 However, utilizing hierarchical bitmap indexing we can often organize subsets of particles into collections of cells which may or may not be contiguous.
 In this situation, we can check for full inclusion within data objects, although we are not able to identify start and stop indices as the data are not assumed to be organized spatially independent of how we have indexed them.
 
-At present, the objects listed in @tbl:selection-objects are provided as selectors in yt.
+At present, the objects listed in Table @tbl:selection-objects are provided as selectors in yt.
 We do make a distinction between "selection" operations and "reduction" or "construction" operations (such as projections and smoothing/resampling), but have included both here for consistency.
 Additionally, some have been marked as not "user-facing," in the sense that they are not expected to be constructed directly by users, but instead are utilized internally for indexing purposes.
 In columns to the right, we provide information as to whether there is an available "fast" path for grid objects.
