First pass replacing YTArray and YTQuantity with unyt_array and unyt_quantity, fixing other things

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -4,38 +4,37 @@ At a basic level, `yt` is an engine for converting data dumped to disk by a simu
 Attaching units to simulation data makes it possible to perform dimensional analysis on the simulation data, adding additional opportunities for catching errors in a data processing pipeline.
 In addition, it becomes straightforward to convert data from one unit system to another.
 
-In `yt` 3.0 we handle units in a an automatic fashion, leveraging the symbolic math library `sympy`.
-Instead of returning a NumPy `ndarray` when users query `yt` data objects for fields, return a `YTArray`, a subclass of `ndarray`.
-`YTArray` preserves `ndarray`'s array operations, including deep and shallow copies, broadcasting, and views.
-Augmenting `ndarray`, `YTArray` attaches unit metadata to the array data, enabling runtime checking of unit consistency in arithmetic operations between `YTArray` instances, and making it trivial to compose new units using algebraic operations.
+In `yt` 4.0 we handle units in a an automatic fashion, leveraging the symbolic math library `sympy`.
+Instead of returning a NumPy `ndarray` when users query `yt` data objects for fields, return a `unyt_array`, a subclass of `ndarray`.
+`unyt_array` preserves `ndarray`'s array operations, including deep and shallow copies, broadcasting, and views.
+Augmenting `ndarray`, `unyt_array` attaches unit metadata to the array data, enabling runtime checking of unit consistency in arithmetic operations between `unyt_array` instances, and making it trivial to compose new units using algebraic operations.
 
-As a trivial example, when one queries a data object (here given the generic name `dd`) for the density field, we get back a YTArray, including both the simulation data for the density field, and the units of the density field, in this case $\rm{g}/\rm{cm}^3$:
+As a trivial example, when one queries a data object (here given the generic name `dd`) for the density field, we get back a `unyt_array``, including both the simulation data for the density field, and the units of the density field, in this case $\rm{g}/\rm{cm}^3$:
 
 ```python
->>> dd[`density'] 
-YTArray([4.92e-31, 4.94e-31, 4.93e-31, ...,
-         1.12e-25, 1.59e-25, 1.09e-24]) g/cm**3
+>>> dd['density'] 
+unyt_array([4.92e-31, 4.94e-31, 4.93e-31, ...,
+            1.12e-25, 1.59e-25, 1.09e-24], 'g/cm**3')
 ```
 
 One of the nicest aspects of this new unit system is that the symbolic algebra for unitful operations is performed automatically by sympy:
 
 ```python
->>> print(dd[`cell_mass']/dd[`cell_volume'])
+>>> print(dd['mass']/dd['cell_volume'])
   [4.92e-31 4.94e-31 4.93e-31 ... 
    1.12e-25 1.59e-25 1.09e-24] g/cm**3
 ```
 
-YTArray is primarily useful for attaching units to NumPy `ndarray` instances.
-For scalar data, we have created the new `YTQuantity` class.
-`YTQuantity` is a subclass of `YTArray` with the requirement that the "array data" associated with the instance be limited to one element.
-`YTQuantity` is primarily useful for physical constants and ensures that the units are propagated correctly when composing quantities from arrays, physical constants, and unitless scalars:
+`unyt_array` is primarily useful for attaching units to NumPy `ndarray` instances.
+For scalar data, we have created the new `unyt_quantity` class.
+`unyt_quantity` is a subclass of `unyt_array` with the requirement that the "array data" associated with the instance be limited to one element.
+`unyt_quantity` is primarily useful for physical constants and ensures that the units are propagated correctly when composing quantities from arrays, physical constants, and unitless scalars:
 
 ```python
->>> from yt.utilities.physical_constants import
-        boltzmann_constant
->>> print(dd[`temperature']*boltzmann_constant)
-[ 1.28e-12 1.29e-12 1.29e-12 ... 
-  1.63e-12 1.59e-12 1.40e-12] erg
+>>> from unyt import boltzmann_constant
+>>> print(dd['temperature']*boltzmann_constant)
+[1.28e-12 1.29e-12 1.29e-12 ... 
+ 1.63e-12 1.59e-12 1.40e-12] erg
 ```
 
 If a user needs the field in a different unit system, they can quickly convert using `convert_to_units` or `in_units`.
@@ -52,9 +51,9 @@ Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit`, attribute tha
 >>> print(ds.length_unit)
 128 Mpccm/h
 >>> print(ds.quan(1.0, "code_length").in_units("Mpccm/h"))
-128 Mpccm/h
+128.0 Mpccm/h
 >>> print(ds.length_unit.in_cgs())
-5.55517285026e+26 cm
+5.555172850264421e+26 cm
 ```
 
 Optionally `velocity_unit`, `pressure_unit`, `temperature_unit`, and `density_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
@@ -71,11 +70,11 @@ To obtain on-disk data, a user need only query a data object using an on-disk fi
 >>> ds = yt.load("Enzo_64/DD0043/data0043")
 >>> dd = ds.all_data()
 >>> print(dd[('enzo', 'Density')])
-[ 6.74e-02 6.12e-02 8.92e-02 ... 
-  9.09e+01 5.66e+01 4.27e+01] code_mass/code_length**3
+[6.74e-02 6.12e-02 8.92e-02 ... 
+ 9.09e+01 5.66e+01 4.27e+01] code_mass/code_length**3
 >>> print(dd[('gas', 'density')])
-[ 1.92e-31 1.74e-31 2.54e-31 ... 
-  2.59e-28 1.61e-28 1.22e-28] g/cm**3
+[1.92e-31 1.74e-31 2.54e-31 ... 
+ 2.59e-28 1.61e-28 1.22e-28] g/cm**3
 ```
 
 Here, the first data object query is returned in code units, while the second is returned in CGS units.
@@ -137,70 +136,72 @@ A dictionary lookup table is also attached to the `UnitRegistry` object, providi
 In general, unit registries should only be adjusted inside of a code frontend, since otherwise quantities and arrays might be created with inconsistent unit metadata.
 Once a unit object is created, it will not receive updates if the original unit registry is modified.
 
-### Creating YTArray and YTQuantity instances {#sec:creating-ytarray-and-ytquantity-instances}
+### Creating unyt_array and unyt_quantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
 There are two ways to create new array and quantity objects: via a constructor, and by multiplying scalar data by a unit quantity.
 
 #### Class Constructor {#sec:class-constructor}
 
-The primary internal interface for creating new arrays and quantities is through the class constructor for YTArray.
+The primary internal interface for creating new arrays and quantities is through the class constructor for `unyt_array`.
 The constructor takes three arguments.
 The first argument is the input scalar data, which can be an integer, float, list, or array.
 The second argument, `input_units`, is a unit specification which must be a string or `Unit` instance.
 Last, users may optionally supply a UnitRegistry instance, which will be attached to the array.
-If no UnitRegistry is supplied, a default unit registry is used instead.
+If no `UnitRegistry` is supplied, a default unit registry is used instead.
 Unit specification strings must be algebraic combinations of unit symbol names, using standard Python mathematical syntax (i.e.
 `**` for the power function, not `^`).
 
-Here is a simple example of `YTArray` creation:
+Here is a simple example of `unyt_array` creation:
 
 ```python
->>> from yt.units import yt_array, YTQuantity 
->>> YTArray([1, 2, 3], `cm') 
-YTArray([1, 2, 3]) cm
->>> YTQuantity(3, `J') 
-3 J
+>>> from unyt import unyt_array, unyt_quantity 
+>>> unyt_array([1, 2, 3], 'cm') 
+unyt_array([1, 2, 3]) cm
+>>> unyt_quantity(3, 'J') 
+unyt_quantity(3, 'J') 
 ```
 
 In addition to the class constructor, we have also defined two convenience functions, `quan`, and `arr`, for quantity and array creation that are attached to the `Dataset` base class.
 These were added to syntactically simplify the creation of arrays with the UnitRegistry instance associated with a dataset.
-These functions work exactly like the `YTArray` and `YTQuantity` constructors, but pass the `UnitRegistry` instance attached to the dataset to the underlying constructor call.
+These functions work exactly like the `unyt_array` and `unyt_quantity` constructors, but pass the `UnitRegistry` instance attached to the dataset to the underlying constructor call.
 For example:
 
 ```python
 >>> import yt
 >>> ds = yt.load("Enzo_64/DD0043/data0043")
->>> ds.arr([1, 2, 3], `code_length').in_cgs() 
-YTArray([ 5.55e+26, 1.11e+27, 1.66e+27]) cm
+>>> ds.arr([1, 2, 3], 'code_length').in_cgs() 
+unyt_array([5.55e+26, 1.11e+27, 1.66e+27], 'cm')
 ```
 
 This example illustrates that the array is being created using `ds.unit_registry`, rather than the `default_unit_registry`, for which `code_length` is equivalent to `cm`.
 
 #### Multiplication {#sec:multiplication}
 
-New `YTArray` and `YTQuantity` instances can also be created by multiplying `YTArray` or `YTQuantity` instances by `float` or `ndarray` instances.
-To make it easier to create arrays using this mechanism, we have populated the `yt.units` namespace with predefined `YTQuantity` instances that correspond to common unit symbol names.
+New `unyt_array` and `unyt_quantity` instances can also be created by multiplying `unyt_array`, `unyt_quantity`, or `Unit` instances by `float` or `ndarray` instances. 
+To make it easier to create arrays using this mechanism, we have populated the `unyt` namespace with predefined `Unit` instances that correspond to common unit symbol names.
 For example:
 
 ```python
->>> from yt.units import meter, gram, kilogram, second, joule 
+>>> from unyt import meter, gram, kilogram, second, joule 
 >>> kilogram * meter**2 == joule 
 True
->>> from yt.units import m, kg, s, W 
+>>> from unyt import m, kg, s, W 
 >>> kg*m**2/s**3 == W
 True
 
->>> from yt.units import kilometer 
+>>> from unyt import kilometer 
 >>> three_kilometers = 3*kilometer 
 >>> print(three_kilometers)
 3.0 km
 
->>> from yt.units import gram, kilogram 
->>> print(gram+kilogram)
+>>> from unyt import gram, kilogram 
+>>> my_g = 1.0*gram
+>>> my_kg = 1.0*kilogram
+>>> print(my_g+my_kg)
 1001.0 g 
->>> print(kilogram+gram)
+>>> print(my_kg+my_g)
 1.001 kg 
->>> print(kilogram/gram)
+>>> print(my_kg/my_g)
 1000.0 dimensionless
 ```
 
@@ -214,8 +215,8 @@ To handle this fact of life, the `yt` unit system can modify, add, and remove un
 To create quantities and arrays in units defined by a simulation coordinate system, we associate a `UnitRegistry` instance with `Dataset` instances.
 This unit registry contains the metadata necessary to convert the array to CGS from some other known unit system and is available via the `unit_registry` attribute that is attached to all `Dataset` instances.
 
-We have modified the definition for `set_code_units` in the `StaticOutput` base class.
-In this new implementation, the predefined `code_mass`, `code_length`, `code_time`, and `code_velocity` symbols are adjusted to the appropriate values and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit` attributes are attached to the `StaticOutput` instance.
+We have modified the definition for `set_code_units` in the `Dataset` base class.
+In this new implementation, the predefined `code_mass`, `code_length`, `code_time`, and `code_velocity` symbols are adjusted to the appropriate values and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit` attributes are attached to the `Dataset` instance.
 If there are frontend specific code units they should also be defined in subclasses by extending this function.
 
 #### Mixing modified unit registries {#sec:mixing-modified-unit-registries}
@@ -231,16 +232,14 @@ The examples below illustrate the consistency of this choice:
 
 ```python
 >>> import yt
->>> ds1 = yt.load(`Enzo_64/DD0002/data0002')
->>> ds2 = yt.load(`Enzo_64/DD0043/data0043')
+>>> ds1 = yt.load('Enzo_64/DD0002/data0002')
+>>> ds2 = yt.load('Enzo_64/DD0043/data0043')
 >>> print(ds1.length_unit, ds2.length_unit)
 128 Mpccm/h, 128 Mpccm/h
 >>> print(ds1.length_unit.in_cgs())
 6.26145538088e+25 cm
 >>> print(ds2.length_unit.in_cgs())
 5.55517285026e+26 cm 
-
-
 >>> print(ds1.length_unit*ds2.length_unit)
 145359.100149 Mpccm**2
 >>> print(ds2.length_unit*ds1.length_unit)
@@ -249,13 +248,13 @@ The examples below illustrate the consistency of this choice:
 
 For the last two examples, the answer is not the seemingly trivial $128^2=16384,\rm{Mpccm}^2/h^2$.
 This is because the new quantity returned by the multiplication operation inherits the unit registry from the left object in binary operations.
-This convention is enforced for all binary operations on two `YTarray` objects.
+This convention is enforced for all binary operations on two `unyt_array` objects.
 Results are always consistent when referencing an unambiguous physical coordinate system:
 
 ```python
->>> print((pf1.length_unit * pf2.length_unit).in_cgs())
+>>> print((ds1.length_unit * ds2.length_unit).in_cgs())
 3.4783466935e+52 cm**2 
->>> print(pf1.length_unit.in_cgs() * pf2.length_unit.in_cgs())
+>>> print(ds1.length_unit.in_cgs() * ds2.length_unit.in_cgs())
 3.4783466935e+52 cm**2
 ```
 
@@ -266,4 +265,4 @@ Comoving length unit symbols are still named following the pattern `<length symb
 `Mpccm`.
 
 The $h$ symbol is treated as a base unit, `h`, which defaults to unity.
-The `Dataset.set_units` updates the `h` symbol to the correct value when loading a cosmological simulation.
+The `Dataset.set_units` method updates the `h` symbol to the correct value when loading a cosmological simulation.
